Bug 116438 - Calc,Draw,Impress should also ask whether to apply orientation when an image is inserted
Summary: Calc,Draw,Impress should also ask whether to apply orientation when an image ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-16 20:08 UTC by himajin100000
Modified: 2021-11-30 05:46 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2018-03-16 20:08:53 UTC
Description:
see steps to reproduce


Steps to Reproduce:
1. Download f-orientation-3.jpg(or f-orientation-6.jpg or f-orientation-8.jpg) and f-orientation-1.jpg(just for reference) from
https://github.com/minodisk/go-fix-orientation/tree/master/processor/fixtures

2. OK Case:

2-a. Run Writer
2-b. Insert -> Image from the main menu.
2-c. Specify f-orientation-3.jpg and click Open
2-d. A dialog "Rotate int standard orientation?" appears.
2-e. Click Yes
2-f. the inserted image looks like f-orientation-1.jpg
if you have chosen No in 2-e, the image will look as 180 degrees rotated version.

3. Now, NG case:

3-a. Run Calc
3-b. Insert -> Image from the main menu.
3-c. Specify f-orientation-3.jpg and click Open
3-d. No dialog appears.
3-e. there is nothing to do.
3-f. the image will look as 180 degrees rotated version.

Actual Results:  
as written in 3-d and 3-e

Expected Results:
work as written in 2-d and 2-e in Calc,Draw and Impress


Reproducible: Always


User Profile Reset: No



Additional Info:
I will submit a patch. 

Note: the patch would not cover "drag-dropping an image" into Calc, Draw and Impress. I haven't gone that far.

Note: This patch will not change writer's dialog into "weld" version
/core/sw/source/uibase/uiview/view2.cxx?r=5c151537#224

Note: I'm still not sure what to pass as the first argument for Application::CreateMessageDialog

Version: 6.1.0.0.alpha0+ (x64)
Build ID: e5bc7fa4e83b33fc3eee343e560a4f8cb91eacd6
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-15_00:49:26
Locale: en-US (ja_JP); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:61.0) Gecko/20100101 Firefox/61.0
Comment 1 himajin100000 2018-03-16 20:35:35 UTC
Wait for a while. logerrit is complaining.

! [remote rejected]           HEAD -> refs/drafts/master (you are not allowed to upload merges)
error: failed to push some refs to 'ssh://logerrit/core'

I have been doing some cleanups of my cygwin environment, like the ones I carelessly configure-d on home directory rather than build directory, and that might be one of the cause.
Comment 2 himajin100000 2018-03-16 23:01:52 UTC
self-solved logerrit issue.

submission done.
https://gerrit.libreoffice.org/#/c/51447/
Comment 3 Timur 2018-03-20 09:50:08 UTC
If accepted, please add to https://wiki.documentfoundation.org/ReleaseNotes/6.1.
Comment 4 Commit Notification 2018-03-27 13:07:29 UTC
himajin100000 committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e97ab52a83d2440ca42c85229ef794549208cb7d

tdf#116438:Apps should ask if rotation should be applied

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 himajin100000 2018-03-27 13:12:19 UTC
marking RESOLVED FIXED

feel free to reopen if you find any problems