tdf#116438:Apps should ask if rotation should be applied

For Calc,Draw,Impress. Writer already does this.

Change-Id: I92512719673fb39a973b8a68378e93f30d82c327
Reviewed-on: https://gerrit.libreoffice.org/51447
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>