sc/inc/pch/precompiled_scui.hxx
@@ -45,6 +45,9 @@
 #include <vcl/svapp.hxx>
 #include <vcl/waitobj.hxx>
 #include <vcl/window.hxx>
+#include <vcl/weld.hxx>
+#include <vcl/GraphicNativeTransform.hxx>
+#include <vcl/GraphicNativeMetadata.hxx>
 #include <appoptio.hxx>
 #include <attrib.hxx>
 #include <autoform.hxx>
